--- a/public/css/user/style.css
+++ b/public/css/user/style.css
@@ -1,1 +1,11 @@
 .pointer {cursor: pointer;}
+.dim {
+  z-index: 100;
+  background-color: black;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.3;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
