--- a/views/user/home/login.pug
+++ b/views/user/home/login.pug
@@ -13,6 +13,14 @@ block content
       .mb-3.form-check
         //- input#exampleCheck1.form-check-input(type="checkbox")
         //- label.form-check-label(for="exampleCheck1") Check me out
+      .mb-3 
+        a#kakao-login-btn(href="javascript:loginWithKakao()")
+          img(src="https://k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg" width="222" alt="카카오 로그인 버튼")
+        p#token-result
+
       button.btn.btn-primary#login_btn(type="button") 로그인
       button.btn.btn-primary#register_btn.ms-2(type="button", onclick="location.href='/register'") 회원가입
+      
+
   script(src="/javascript/user/home/login.js") 
+  script(src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js" integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4" crossorigin="anonymous")
