--- a/views/user/home/register.pug
+++ b/views/user/home/register.pug
@@ -25,6 +25,6 @@ block content
         label(for="inputAddress2").form-label 상세주소
         input#inputAddress2.form-control(type="text", name="address_detail")
       .col-12
-        button.btn.btn-primary.regist_btn(type="button") Sign in
+        button.btn.btn-primary.regist_btn(type="button",onclick="save()") Sign in
   script(src="/javascript/user/home/register.js") 
   script(src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js") 
