--- a/views/user/home/register.pug
+++ b/views/user/home/register.pug
@@ -5,7 +5,7 @@ block content
     form.row.g-3.regist_form
       .col-md-6
         label(for="inputEmail4").form-label 이름
-        input#inputEmail4.form-control(type="text",name="name")
+        input#inputEmail4.form-control(type="text",name="name",maxlength="10")
       .col-md-6
         label(for="inputEmail4").form-label 휴대폰번호
         input#inputEmail4.form-control(type="text",name="mobile_number")
