--- a/views/user/include/footer.pug
+++ b/views/user/include/footer.pug
@@ -10,9 +10,19 @@
       .modal-footer(style="border:0")
         //- button.btn.btn-secondary(type="button" data-bs-dismiss="modal") Close
         button.btn.btn-danger.modal_close(type="button") 확인
-
+.modal#custom_success_alert(tabindex="-1")
+  .modal-dialog.modal-dialog-centered
+    .modal-content
+      .modal-header(style="border:0")
+        //- h5.modal-title Modal title
+        button.btn-close.modal_close(type="button" data-bs-dismiss="modal" aria-label="Close")
+      .modal-body
+        p.text-center.pt-2 Modal body text goes here.
+      .modal-footer(style="border:0")
+        //- button.btn.btn-secondary(type="button" data-bs-dismiss="modal") Close
+        button.btn.btn-primary.modal_close(type="button") 확인
 .modal#custom_confirm(tabindex="-1")
-  .modal-dialog
+  .modal-dialog.modal-dialog-centered
     .modal-content
       .modal-header(style="border:0")
         //- h5.modal-title Modal title
