jwt 미들웨어 추가 완료

--- a/views/user/include/nav.pug
+++ b/views/user/include/nav.pug
@@ -13,7 +13,7 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary
           a.nav-link(href="#") Pricing
       span.navbar-text
         span.material-symbols-outlined.pointer.fs-3(onclick="location.href='/login'") login
-        span.material-symbols-outlined.pointer.fs-3.ms-3 shopping_bag
+        span.material-symbols-outlined.pointer.fs-3.ms-3(onclick="location.href='/cart'") shopping_bag
       
 
         
