--- a/views/admin/home/login.pug
+++ b/views/admin/home/login.pug
@@ -43,7 +43,7 @@ html(lang="KOR")
             .col-lg-4.col-md-6.d-flex.flex-column.align-items-center.justify-content-center
               .d-flex.justify-content-center.py-4
                 a(href="index.html" class="logo d-flex align-items-center w-auto")
-                  img(src="/images/logo.png" alt="")
+                  img(src="/image/admin/logo.png" alt="")
                   span.d-none.d-lg-block NiceAdmin
               .card.mb-3
                 .card-body
@@ -66,10 +66,45 @@ html(lang="KOR")
                     //-     input.form-check-input(type="checkbox" name="remember" value="true" id="rememberMe")
                     //-     label.form-check-label(for="rememberMe") Remember me
                     .col-12
-                      button#login_btn.btn.btn-primary.w-100(type="button") 로그인
+                      button#login_btn.btn.btn-primary.w-100.login_btn(type="button") 로그인
                     .col-12
                       //- p.small.mb-0 Don't have account? a(href="pages-register.html") Create an account
               .credits  
                 | Designed by
                 a(href="https://bootstrapmade.com/") BootstrapMade
-    script(src="/javascripts/admin/home/login.js") 
+      .dim(style="display:none")
+      .modal#custom_alert(tabindex="-1")
+        .modal-dialog.modal-dialog-centered
+          .modal-content
+            .modal-header(style="border:0")
+              //- h5.modal-title Modal title
+              button.btn-close.modal_close(type="button" data-bs-dismiss="modal" aria-label="Close")
+            .modal-body
+              p.text-center.pt-2 Modal body text goes here.
+            .modal-footer(style="border:0")
+              //- button.btn.btn-secondary(type="button" data-bs-dismiss="modal") Close
+              button.btn.btn-danger.modal_close(type="button") 확인
+      .modal#custom_success_alert(tabindex="-1")
+        .modal-dialog.modal-dialog-centered
+          .modal-content
+            .modal-header(style="border:0")
+              //- h5.modal-title Modal title
+              button.btn-close.modal_close(type="button" data-bs-dismiss="modal" aria-label="Close")
+            .modal-body
+              p.text-center.pt-2 Modal body text goes here.
+            .modal-footer(style="border:0")
+              //- button.btn.btn-secondary(type="button" data-bs-dismiss="modal") Close
+              button.btn.btn-primary.modal_close(type="button") 확인
+      .modal#custom_confirm(tabindex="-1")
+        .modal-dialog.modal-dialog-centered
+          .modal-content
+            .modal-header(style="border:0")
+              //- h5.modal-title Modal title
+              button.btn-close.modal_close(type="button" data-bs-dismiss="modal" aria-label="Close")
+            .modal-body
+              p.text-center.pt-2 Modal body text goes here.
+            .modal-footer(style="border:0")
+              button.btn.btn-secondary.modal_close(type="button" data-bs-dismiss="modal") 취소
+              button.btn.btn-primary.modal_confirm(type="button") 확인
+    script(src="/javascript/admin/home/login.js") 
+    script(src="/javascript/common.js") 
