관리자 직원 페이지 진행 중

--- a/views/admin/include/footer.pug
+++ b/views/admin/include/footer.pug
@@ -1,4 +1,4 @@
-.dim(style="display:none")
+.dim(style="display:none;z-index: 100;background-color: black;width: 100vw;height: 100vh;opacity: 0.3;position: absolute;top: 0;left: 0;")
 .modal#custom_alert(tabindex="-1")
   .modal-dialog.modal-dialog-centered
     .modal-content
@@ -55,3 +55,4 @@ a.back-to-top.d-flex.align-items-center.justify-content-center(href="#")
 
 //- Template Main JS File
 script(src="/javascript/common/common.js")
+script(src="/javascript/common.js")
