커스텀 select 작성 완료

--- a/views/admin/include/nav.pug
+++ b/views/admin/include/nav.pug
@@ -14,7 +14,7 @@ aside#sidebar.sidebar
         i.bi.bi-chevron-down.ms-auto
       ul#components-nav.nav-content.collapse(data-bs-parent="#sidebar-nav")
         li
-          a.link(href="/admin/employee/list")
+          a.link(href="/admin/employee")
             i.bi.bi-circle
             span 직원관리
     li.nav-item
@@ -24,11 +24,11 @@ aside#sidebar.sidebar
         i.bi.bi-chevron-down.ms-auto
       ul#forms-nav.nav-content.collapse(data-bs-parent="#sidebar-nav")
         li
-          a.link(href="/admin/category/list")
+          a.link(href="/admin/category")
             i.bi.bi-circle
             span 카테고리
         li
-          a.link(href="/admin/goods/list")
+          a.link(href="/admin/goods")
             i.bi.bi-circle
             span 상품관리
         //- li
