--- a/views/admin/category/write.pug
+++ b/views/admin/category/write.pug
@@ -26,7 +26,7 @@ block content
                   a.pointer(herf="javascript:void(0)", data-value="a") 직접입력
                   a.pointer(herf="javascript:void(0)", data-value="1") 유니폼
               .col-sm-6.dropdown
-                .dropdown-btn 2차 카테고리 선택
+                .dropdown-btn.disabled 2차 카테고리
                 .dropdown-content.second_category
                   a.pointer(herf="javascript:void(0)", data-value="a") 직접입력
               .col-sm-6
