유저 상품 페이지 진행

--- a/views/user/include/nav.pug
+++ b/views/user/include/nav.pug
@@ -1,14 +1,14 @@
 nav.navbar.navbar-expand-lg.bg-body-tertiary 
   .container-fluid.container
-    a.navbar-brand(href="#") Navbar w/ text
+    a.navbar-brand(href="/") 최강마켓
     button.navbar-toggler(type="button", data-bs-toggle="collapse", data-bs-target="#navbarText", aria-controls="navbarText", aria-expanded="false", aria-label="Toggle navigation")
       span.navbar-toggler-icon
     .collapse.navbar-collapse(id="navbarText")
       ul.navbar-nav.me-auto.mb-2.mb-lg-0
         li.nav-item
-          a.nav-link.active(aria-current="page", href="#") Home
+          a.nav-link(aria-current="page", href="/") Home
         li.nav-item
-          a.nav-link(href="/login") Features
+          a.nav-link(href="/product/1") 유니폼
         li.nav-item
           a.nav-link(href="#") Pricing
       span.navbar-text
